<resources>
    <string name="osReg" translatable="false">raleway.ttf</string>
    <string name="osBold" translatable="false">raleway_bold.ttf</string>
    <string name="osSemiBold" translatable="false">raleway_semibold.ttf</string>
    <string name="font_provider_authority" translatable="false">com.google.android.gms.fonts</string>
    <string name="font_provider_package" translatable="false">com.google.android.gms</string>
    <string name="font_query_emoji" translatable="false">Noto Color Emoji Compat</string>
    <string name="transition_landscape" translatable="false">landscape</string>
    <string name="transition_full_view" translatable="false">full_view</string>
    <string name="notification_unsent_messages_title">Unsent chat messages</string>
    <string name="notification_unsent_messages_text">You have some messages we couldn\'t send.\nTap to open Chat section.</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_login">Sign in</string>
    <string name="prompt_email">Email address</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_up">Sign up</string>
    <string name="action_sign_up_2">Next</string>
    <string name="action_login">Log in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is invalid</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="error_not_same_pwd">The 2 passwords don\'t match</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."
    </string>
    <string name="error_data_connection">No data connection available</string>
    <string name="prompt_first_name">Enter your First Name</string>
    <string name="prompt_last_name">Enter your Last Name</string>
    <string name="login_user_agreement">By signing up, you agree to our Gender Fair Terms &amp; Conditions and that you have read our Privacy Policy.</string>
    <string name="click_agreement_tos">Terms &amp; Conditions</string>
    <string name="click_agreement_privacy">Privacy Policy</string>
    <string name="click_agreement_cookie">Cookie Use</string>
    <string name="login_no_account">Don\'t have an account?</string>
    <string name="login_already_account">Already have an account?</string>
    <string name="error_unknown">Oops, something went wrong!</string>
    <string name="error_all_fields_required">All fields required</string>
    <string name="error_req_fields_signup">Required fields: first name, last name, email, password</string>
    <string name="password_recovery">Forgot your login details? Get help signing in.</string>
    <string name="click_recovery">Get help signing in</string>
    <string name="error_recovery_email_empty">You have to enter your email in order to proceed</string>
    <string name="dialog_password_recovery_title">Password recovery</string>
    <string name="pwd_recovery_send_request">Send request</string>
    <string name="click_confirm_email">Click the link in the mail and reopen HL to sign in</string>
    <string name="click_confirm_email_2">Click the link in the mail we\'ve sent you:</string>
    <string name="error_email_not_confirmed">You must confirm your email address before logging in</string>
    <string name="error_invalid_credentials">Please check your credentials for errors</string>
    <string name="error_signin_wrong_pwd">Please check your password for errors</string>
    <string name="error_email_already_in_use">We\'re sorry but this email has already been used</string>
    <string name="error_reading_data">Error in reading data</string>
    <string name="go">Go</string>
    <string name="error_generic_list">Sorry, our bad! The list may not be updated</string>
    <string name="error_device_no_camera">Your device doesn\'t have a camera for the media recording</string>
    <string name="error_creating_post">We could\'t create your story. Please, try again later.</string>
    <string name="post_interaction_confirm_hearts">You\'ve sent %1$s&lt;br>%2$d Hearts!</string>
    <string name="post_interaction_confirm_heart">You\'ve sent %1$s&lt;br>%2$d Heart!</string>
    <string name="post_interaction_confirm_comments">Your comment has been sent to %1$s!</string>
    <string name="post_interaction_confirm_reply">Your reply has been sent to %1$s!</string>
    <string name="post_interaction_confirm_comments_own_post">Your comment has been posted!</string>
    <string name="post_interaction_confirm_reply_own_post">Your reply has been posted!</string>
    <string name="post_interaction_confirm_shares">You have successfully shared the story!</string>
    <string name="send_hearts">Tell %1$s&lt;br>how you love this story</string>
    <string name="reply_to_comment">Reply.</string>
    <string name="add_tags">Add tags</string>
    <string name="label_privacy_public">Public</string>
    <string name="label_privacy_ic">@string/inner_circle</string>
    <string name="label_privacy_ic_members">My Inner Circle members</string>
    <string name="label_privacy_only_me">Only Me</string>
    <string name="label_privacy_sel_users">Only Selected Users</string>
    <string name="label_privacy_sel_circles">Only Selected Circles</string>
    <string name="label_privacy_no_one">No One</string>
    <string name="label_privacy_everyone">Everyone</string>
    <string name="action_on">On</string>
    <string name="action_off">Off</string>
    <string name="swipe_up_to_send_comment">Swipe up to send comment</string>
    <string name="swipe_up_to_send_hearts">Swipe up to send Hearts</string>
    <string name="swipe_up_to_share">Swipe up to share story</string>
    <string name="hint_comment">Comment</string>
    <string name="option_comment_edit">Edit</string>
    <string name="option_comment_report">Report</string>
    <string name="option_comment_reply">Reply</string>
    <string name="option_comment_delete">Delete</string>
    <string name="removing_heart">Removing your Heart…</string>
    <string name="sending_heart">Sending your Heart…</string>
    <string name="heart_sent_to_comment">Heart successfully sent</string>
    <string name="reply_to">Reply to %s</string>
    <string name="share_post_with">Share story with</string>
    <string name="error_no_selection_to_share">You haven\'t selected anyone to share the story with!</string>
    <string name="error_no_rating_chosen">Choose 1 to 5 Hearts to send!</string>
    <string name="search_here">Search here…</string>
    <string name="add">Add</string>
    <string name="hint_post_et">Capture the moment, %s!</string>
    <string name="take_picture">Take a picture</string>
    <string name="record_video">Record a video</string>
    <string name="error_empty_post_dialog_message">Add your personal touch: select a media file or type what\'s on your mind!</string>
    <string name="retry">Retry</string>
    <string name="error_upload_media">Oops, our bad! We couldn\'t upload your media file.\nPlease try again.</string>
    <string name="uploading_media">Uploading media</string>
    <string name="uploading_media_progress">Uploading media %d%%</string>
    <string name="uploading_media_compression">Media compression %d%%</string>
    <string name="uploading_attachment_of">Uploading attachment %1$d of %2$d</string>
    <string name="dots">%s…</string>
    <string name="sending_post">Sending story</string>
    <string name="dialog_wifi_title">Wrong connection type?</string>
    <string name="dialog_wifi_content">Do you want to upload your video without a Wi-Fi connection?</string>
    <string name="record_instruction">Press &amp; hold to record</string>
    <string name="audio_file_deleted">File deleted successfully</string>
    <string name="error_no_free_space">There isn\'t enough free space to attach the selected type of media</string>
    <string name="error_generic_operation">Sorry, we couldn\'t perform the desired operation.\nPlease, try again.</string>
    <string name="recording_audio">Audio recording started…</string>
    <string name="error_connection_changed">A connectivity change has been detected. If needed, try the last operation again</string>
    <string name="view_tags">&lt;u>view tags&lt;/u></string>
    <string name="view_all_tags">view all</string>
    <string name="buffering_audio">Buffering audio…</string>
    <string name="option_post_hide">Hide story</string>
    <string name="option_post_block">Block user</string>
    <string name="option_post_edit">Edit story</string>
    <string name="option_post_delete">Delete story</string>
    <string name="flag_report_post_title">Report story</string>
    <string name="flag_report_post_message">Please explain why you are reporting this story.</string>
    <string name="flag_hide_post_message">This story will no longer be visible to you.</string>
    <string name="flag_block_user_message">To unlock a User, go to Settings &#8594; Privacy &#8594; Blocked, and manually lift the block to the single User.</string>
    <string name="cancel">Cancel</string>
    <string name="action_block">Block</string>
    <string name="action_hide">Hide</string>
    <string name="action_report">Report</string>
    <string name="dialog_flag_report_hint">Your reasons go here</string>
    <string name="option_post_report">Report story</string>
    <string name="create_new_folder">+ Create new folder</string>
    <string name="create_list_title">Create folder</string>
    <string name="dialog_create_list_hint">Enter name here</string>
    <string name="new_list_created">Folder created successfully</string>
    <string name="post_added_to_list">Story successfully added to %s</string>
    <string name="post_removed_from_list">Story successfully removed from %s</string>
    <string name="shared_via">&lt;i>Shared via&lt;/i> %s</string>
    <string name="buffering_video_perc">Buffering video… %s%%</string>
    <string name="buffering_audio_perc">Buffering audio… %s%%</string>
    <string name="buffering_video">Buffering video…</string>
    <string name="choose_video">Choose a video</string>
    <string name="choose_picture">Choose a picture</string>
    <string name="error_wrong_video_extension">Sorry, but the only video format which Fair Square currently supports is .mp4.\n\nTry selecting a new video from your library!</string>
    <string name="now">Now</string>
    <string name="invite_to_inner_circle">Invite to Inner Circle</string>
    <string name="profile_diary_me">Diary</string>
    <string name="profile_diary_friend">@string/profile_diary_me</string>
    <string name="signup_dob">Date of Birth</string>
    <string name="login_title_2_onboarding">Welcome to Fair Square&lt;br>&lt;br>A 21&lt;sup>&lt;small>st&lt;/small>&lt;/sup> century private club for women that celebrates and accelerates equality.</string>
    <string name="signup_pwd_constraints">Minimum 8 characters in length and should be a mix of upper and lowercase letters, numbers and special characters ($@!%*?&amp;).</string>
    <string name="home_menu_about">About</string>
    <string name="home_menu_analytics">Analytics</string>
    <string name="home_menu_partners">Partners</string>
    <string name="home_menu_services">Services</string>
    <string name="onboarding_title_9">Play fair</string>
    <string name="onboarding_cb1_9">Be authentic. Use your real name and have only one account.</string>
    <string name="onboarding_cb2_9">Support your fellow women. Be kind. Or at least be civil.</string>
    <string name="onboarding_cb3_9">No abusive, offensive or doctored material.</string>
    <string name="onboarding_cb4_9">Pledge to shop Gender Fair.</string>
</resources>