<!--
  Copyright (c) 2018. Highlanders LLC - All Rights Reserved
  Unauthorized copying of this file, via any medium is strictly prohibited.
  Proprietary and confidential.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:id="@+id/root_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:descendantFocusability="beforeDescendants"
                style="@style/GenericActivityStyle"
                android:fitsSystemWindows="true"
                tools:application=".activities_and_fragments.LoginActivity">


    <!-- TODO: 2019-06-17    change asset -->
    <ImageView
        android:id="@+id/main_logo"
        android:layout_width="@dimen/logo_width_login"
        android:layout_height="@dimen/logo_height_login"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_margin_lg"
        android:focusable="true"
        android:focusableInTouchMode="true"
        app:srcCompat="@drawable/ic_gf_whitelogo_fsquare_login" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_margin_lg"
        android:layout_marginBottom="@dimen/activity_margin"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_below="@id/main_logo"
        android:textAlignment="center"
        android:text="@string/login_title_2_onboarding"
        android:textSize="18sp"
        android:gravity="center"
        android:textColor="@color/colorAccent"
        android:includeFontPadding="false"
        android:fontFamily="@font/raleway_medium"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/title"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:id="@+id/layout_switch_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin">

                <LinearLayout
                    android:id="@+id/login_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:alpha="0"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/onboarding_message"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:textAlignment="center"
                        android:textColor="@color/black_70"
                        android:textStyle="italic"
                        android:fontFamily="@font/raleway"
                        android:layout_marginStart="@dimen/activity_margin_lg"
                        android:layout_marginEnd="@dimen/activity_margin_lg"
                        android:layout_marginTop="@dimen/activity_margin_lg"
                        android:layout_marginBottom="10dp"
                        android:maxLines="3"
                        tools:text="Onboarding message Onboarding message"
                        android:visibility="gone"/>


                    <include layout="@layout/custom_edit_text"
                             android:id="@+id/email_login"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:inputType="textEmailAddress"/>

                    <include layout="@layout/custom_edit_text"
                             android:id="@+id/password_login"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:imeOptions="actionDone"
                             android:imeActionLabel="@string/go"
                             android:inputType="textVisiblePassword"/>

                    <TextView
                        android:id="@+id/password_recovery"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/activity_vertical_margin"
                        android:textColor="@color/black_70"
                        android:textColorLink="@color/black_87"
                        android:textColorHighlight="@color/transparent"
                        android:text="@string/password_recovery"
                        android:textSize="14sp"
                        android:fontFamily="@font/raleway"/>
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/signup_form"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:alpha="1"
                    android:visibility="visible">

                    <include layout="@layout/custom_edit_text"
                             android:id="@+id/email_signup"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_marginTop="10dp"
                             android:inputType="textEmailAddress"/>

                    <!-- INFO: 2019-06-17    first and last names are postponed in onboarding -->
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:weightSum="1"
                        android:layout_marginTop="10dp"
                        android:baselineAligned="false"
                        android:visibility="gone">

                        <include layout="@layout/custom_edit_text"
                                 android:id="@+id/first_name"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".5"
                                 android:layout_marginEnd="5dp"/>

                        <include layout="@layout/custom_edit_text"
                                 android:id="@+id/last_name"
                                 android:layout_width="0dp"
                                 android:layout_height="wrap_content"
                                 android:layout_weight=".5"
                                 android:layout_marginStart="5dp"/>
                    </LinearLayout>

                    <!-- INFO: 2019-06-17    birthdate completely removed from signup process -->
                    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                  xmlns:app="http://schemas.android.com/apk/res-auto"
                                  xmlns:tools="http://schemas.android.com/tools"
                                  android:id="@+id/birthdate_layout"
                                  android:layout_width="match_parent"
                                  android:layout_height="wrap_content"
                                  android:layout_marginTop="10dp"
                                  android:clickable="true"
                                  android:focusable="true"
                                  android:onClick="onClick"
                                  android:orientation="vertical"
                        android:visibility="gone">

                        <TextView
                            android:id="@+id/birthdate"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@null"
                            android:drawablePadding="10dp"
                            android:fontFamily="@font/raleway"
                            android:includeFontPadding="false"
                            android:paddingBottom="@dimen/activity_vertical_margin"
                            android:paddingEnd="0dp"
                            android:paddingStart="0dp"
                            android:paddingTop="@dimen/activity_vertical_margin"
                            android:textColor="@color/color_state_signup_bdate"
                            android:textSize="18sp"
                            android:drawableEnd="@drawable/ic_signup_down_indicator"
                            android:text="@string/signup_dob"/>

                        <include layout="@layout/custom_divider"/>

                    </LinearLayout>

                    <!-- INFO: 2019-05-07    no GENDER info -->
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingTop="10dp"
                        android:weightSum="1"
                        android:baselineAligned="false"
                        android:visibility="gone">

                        <include
                            android:id="@+id/check_male"
                            layout="@layout/layout_custom_checkbox_swap"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_gravity="center"
                            android:layout_weight=".5"/>

                        <include
                            android:id="@+id/check_female"
                            layout="@layout/layout_custom_checkbox_swap"
                            android:layout_width="0dp"
                            android:layout_height="50dp"
                            android:layout_weight=".5"/>
                    </LinearLayout>

                    <include layout="@layout/custom_edit_text"
                             android:id="@+id/password_signup"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"/>

                    <include layout="@layout/custom_edit_text"
                        android:id="@+id/password_signup_confirm"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/raleway"
                        android:layout_marginTop="10dp"
                        android:textSize="13sp"
                        android:textColor="@color/colorAccent"
                        android:text="@string/signup_pwd_constraints"/>

                </LinearLayout>
            </RelativeLayout>

            <Button
                android:id="@+id/main_button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/LoginButtonStyleInverted"
                android:onClick="onClick"
                android:text="@string/action_sign_up"
                android:fontFamily="@font/raleway_bold"/>

            <LinearLayout
                android:id="@+id/view_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal">

                <TextView
                    android:id="@+id/switch_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login_already_account"
                    android:textColor="@color/black_87"
                    android:textSize="16sp"
                    android:fontFamily="@font/raleway_bold"/>

                <TextView
                    android:id="@+id/switch_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:onClick="onClick"
                    android:clickable="true"
                    android:focusable="true"
                    android:padding="3dp"
                    android:text="@string/action_login"
                    android:textSize="16sp"
                    android:textAllCaps="true"
                    android:textColor="@color/colorAccent"
                    android:includeFontPadding="false"
                    android:fontFamily="@font/raleway_bold"/>
            </LinearLayout>

            <TextView
                android:id="@+id/end_user_agreement"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:padding="@dimen/activity_margin"
                android:textColor="@color/black_87"
                android:textColorLink="@color/black_87"
                android:textColorHighlight="@color/transparent"
                android:textAlignment="textStart"
                android:text="@string/login_user_agreement"
                android:textSize="13sp"
                android:background="@color/divider_on_white"
                android:includeFontPadding="false"
                android:fontFamily="@font/raleway"/>

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/custom_generic_progress_indicator"/>

</RelativeLayout>
